@@ -4,6 +4,7 @@ import net.dirtcraft.dirtlauncher.DirtLauncher;
 import net.dirtcraft.dirtlauncher.configuration.Settings;
 import net.dirtcraft.dirtlauncher.game.authentification.Account;
 import net.dirtcraft.dirtlauncher.game.modpacks.Modpack;
+import net.dirtcraft.dirtlauncher.lib.data.json.forge.ForgeVersion;
 import net.dirtcraft.dirtlauncher.lib.data.json.mojang.Java.JavaVersion;
 
 import java.io.File;
@@ -16,6 +17,7 @@ public class Launcher {
     private final File directory;
     private final JavaVersion java;
     private final Modpack modpack;
+    private String mainClass;
     private final List<String> javaArgs = new ArrayList<>();
     private final List<String> gameArgs = new ArrayList<>();
     private final List<String> classpath = new ArrayList<>();
@@ -41,16 +43,27 @@ public class Launcher {
         return this;
     }
 
+    public Launcher applyForgeProfile(ForgeVersion forge) {
+        this.mainClass = forge.getMainClass();
+        applyJavaArgs(forge.getRuntimeArgs());
+        applyGameArgs(forge.getMinecraftArgs());
+        applyGameArgs(
+                "--version", forge.getForgeVersion(),
+                "--assetIndex", forge.getMinecraftVersion(),
+                "--versionType", forge.getReleaseType());
+        return this;
+    }
+
     public String[] processArgs(Settings settings, Account account) {
         ArrayList<String> program = new ArrayList<>();
         program.add(java.getJavaExec().toString());
         program.add("-Djava.library.path=" + settings.getVersionsDirectory().resolve(modpack.getGameVersion()).resolve("natives"));
         program.addAll(javaArgs);
-        program.add("-cp");
-        program.add(String.join(";", classpath));
         program.add(String.format("-Xmx%dM", settings.getMaximumRam()));
         program.add(String.format("-Xms%dM", settings.getMinimumRam()));
-        program.add("cpw.mods.modlauncher.Launcher");
+        program.add("-cp");
+        program.add(String.join(";", classpath));
+        program.add(mainClass);
         program.addAll(gameArgs);
         program.addAll(Arrays.asList(
                 "--assetsDir", settings.getAssetsDirectory().toString(),
@@ -63,6 +76,7 @@ public class Launcher {
         return program.toArray(new String[0]);
     }
     public Process launch(Settings settings, Account account) throws IOException {
+        if (mainClass == null) throw new IOException("A game-version profile has not been applied!");
         applyJavaArgs(
                 "-XX:HeapDumpPath=MojangTricksIntelDriversForPerformance_javaw.exe_minecraft.exe.heapdump",
                 "-Dos.name=Windows 10",
@@ -70,27 +84,17 @@ public class Launcher {
                 "-Xss1M",
                 "-Dminecraft.launcher.brand=minecraft-launcher",
                 "-Dminecraft.launcher.version=2.2.10675",
-                "-XX:+IgnoreUnrecognizedVMOptions",
-                "--add-exports=java.base/sun.security.util=ALL-UNNAMED",
-                "--add-exports=jdk.naming.dns/com.sun.jndi.dns=java.naming",
-                "--add-opens=java.base/java.util.jar=ALL-UNNAMED",
                 "-XX:+UnlockExperimentalVMOptions",
                 "-XX:+UseG1GC",
                 "-XX:G1NewSizePercent=20",
                 "-XX:G1ReservePercent=20",
                 "-XX:MaxGCPauseMillis=50",
                 "-XX:G1HeapRegionSize=32M");
-        applyGameArgs(
-                "--version", "1.16.5-forge-36.2.9",
-                "--assetIndex", "1.16",
-                "--versionType", "release",
-                "--launchTarget", "fmlclient",
-                "--fml.forgeVersion", "36.2.9",
-                "--fml.mcVersion", "1.16.5",
-                "--fml.forgeGroup", "net.minecraftforge",
-                "--fml.mcpVersion", "20210115.111550");
-        return new ProcessBuilder(processArgs(settings, account)).directory(directory)
-                .inheritIO()
+        return new ProcessBuilder(processArgs(settings, account))
+                .directory(directory)
+                //.inheritIO()
+                .redirectOutput(ProcessBuilder.Redirect.INHERIT)
+                .redirectInput(ProcessBuilder.Redirect.INHERIT)
                 .start();
     }
 }
